# ceasar

./: .gitmodules  README.md
app/: README.md  config.xml  package-lock.json  package.json
app/www/: index.html
app/www/js/: app.js  bluetooth.js  controller.js
calibrater/: README.md
controller/: CMakeLists.txt  README.md  sdkconfig
controller/components/kinematics/: CMakeLists.txt
controller/main/: .gitmodules  CMakeLists.txt  comms.cpp  comms.h  config.h  i2cpwm_controller.cpp  i2cpwm_controller.h  ik_tests.cpp  ik_tests.h  main.cpp  servocontrol.cpp  servocontrol.h  spot_micro_motion_cmd.cpp  spot_micro_motion_cmd.h
controller/main/smfsm/: command.h  spot_micro_idle.cpp  spot_micro_stand.cpp  spot_micro_state.cpp  spot_micro_transition_idle.cpp  spot_micro_transition_stand.cpp  spot_micro_walk.cpp  spot_micro_walk.h
hardware/: README.md
